--- a/demo/app/demos/tab-nav/demo.component.html
+++ b/demo/app/demos/tab-nav/demo.component.html
@@ -77,7 +77,7 @@
 
 <h3>Shared content</h3>
 
-<vcl-tab-nav>
+<vcl-tab-nav [(selectedTabIndex)]="tabIndex">
   <vcl-tab>
     <vcl-tab-label>Tab1</vcl-tab-label>
   </vcl-tab>
