--- a/demo/app/demos/file-input/demo.component.html
+++ b/demo/app/demos/file-input/demo.component.html
@@ -1,9 +1,9 @@
 <h3>File Input</h3>
-<vcl-file-input>My biggest File</vcl-file-input>
+<vcl-file-input>My File</vcl-file-input>
 
 
 <h3>File Input (Disabled)</h3>
-<vcl-file-input [disabled]="true">One File</vcl-file-input>
+<vcl-file-input [disabled]="true">My File</vcl-file-input>
 
 <h3>File Input (multiple)</h3>
 <vcl-file-input [multiple]="true">Many Files</vcl-file-input>
