--- a/lib/ng-vcl/src/month-picker/month-picker.component.html
+++ b/lib/ng-vcl/src/month-picker/month-picker.component.html
@@ -40,7 +40,7 @@
     <div class="vclSeparator"></div>
 
     <ng-template ngFor let-iM [ngForOf]="months" let-i="index">
-      <div *ngIf="i % monthsPerRow === 0" class="vclDGRow" role="row">
+      <div *ngIf="currentMeta && i % monthsPerRow === 0" class="vclDGRow" role="row">
         <div *ngFor="let jM of months.slice(i, (i + monthsPerRow > months.length ? months.length : i + monthsPerRow)); let j = index;"
           (click)="selectMonth(currentYear, i+j)"
           class="vclDGCell vclCalItem"
@@ -49,10 +49,10 @@
           [class.vclToday]="isCurrentMonth(i+j)"
           [class.vclOtherMonth]="!isCurrentMonth(i+j)"
           [class.vclDisabled]="useAvailableMonths && !currentMeta[i+j].available"
-          [class.vclSelected]="currentMeta[i+j].selected || currentMeta[i+j].preselected"
+          [class.vclSelected]="isSelected(i + j)"
           [style.background-color]="currentMeta[i+j].color"
           [style.order]="i+j"
-          [attr.aria-selected]="currentMeta[i+j].selected || currentMeta[i+j].preselected"
+          [attr.aria-selected]="isSelected(i + j)"
           [tabindex]="i+j"
           role="gridcell">
             <div class="vclLayoutHorizontal vclLayoutCenterJustified vclMonthPickerListItemLabel">
