--- a/lib/jss-form/src/jss-form.component.html
+++ b/lib/jss-form/src/jss-form.component.html
@@ -1,11 +1,13 @@
-<form class="vclForm" novalidate [formGroup]="form" (ngSubmit)="onSubmit()">
-  <ng-container *ngFor="let fo of formObjects">
-    <vcl-jss-form-object [form]="form" 
-                         [fo]="fo"
-                         (action)="onAction($event)"
-                         [formComponent]="this"
-                         >
-    </vcl-jss-form-object>
-  </ng-container>
+<form class="vclForm" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <vcl-form-control-group>
+    <ng-container *ngFor="let fo of formObjects">
+      <vcl-jss-form-object [form]="form" 
+                          [fo]="fo"
+                          (action)="onAction($event)"
+                          [formComponent]="this"
+                          >
+      </vcl-jss-form-object>
+    </ng-container>
+  </vcl-form-control-group>
   <ng-content></ng-content>
 </form>
