--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -17,4 +17,9 @@
       <vcl-icon icon="fas:chevron-down"></vcl-icon>
 </button>
 
-<ng-content select="vcl-dropdown"></ng-content>
+<ng-template>
+  <div style="width: 100%">
+    <ng-content></ng-content>
+  </div>
+</ng-template>
+
