--- a/demo/app/demos/autocomplete/demo.component.html
+++ b/demo/app/demos/autocomplete/demo.component.html
@@ -1,47 +1,38 @@
-<h3>single-select</h3>
-<vcl-select>
-  <vcl-select-list [(value)]="value1">
-    <vcl-select-list-item label=" - ">
-      <vcl-select-list-label>None</vcl-select-list-label>
-    </vcl-select-list-item>
+<h3>Basic autocomplete</h3>
+
+<vcl-embedded-input-group>
+  <vcl-icon vclPrepend icon="fas:flag"></vcl-icon>
+  <input placeholder="Search"
+         vclInput
+         [vclAutocomplete]="acCountries"
+         />
+</vcl-embedded-input-group>
+
+<vcl-autocomplete #acCountries="vclAutocomplete">
+  <vcl-select-list>
     <vcl-select-list-header>Europe</vcl-select-list-header>
-    <vcl-select-list-item value="gr">
+    <vcl-select-list-item value="Greece">
       <vcl-select-list-label>Greece</vcl-select-list-label>
       <vcl-select-list-sublabel>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-select-list-sublabel>
     </vcl-select-list-item>
-    <vcl-select-list-item value="fr">
+    <vcl-select-list-item value="France">
       <vcl-select-list-label>France</vcl-select-list-label>
     </vcl-select-list-item>
-    <vcl-select-list-item value="de">
+    <vcl-select-list-item value="Germany">
       <vcl-select-list-label>Germany</vcl-select-list-label>
     </vcl-select-list-item>
-    <vcl-select-list-item value="gb" label="United Kingdom">
+    <vcl-select-list-item value="The United Kingdom">
       <vcl-select-list-label>The United Kingdom of Great Britain and Northern Ireland</vcl-select-list-label>
     </vcl-select-list-item>
     <vcl-select-list-header>Asia</vcl-select-list-header>
-    <vcl-select-list-item value="jp">
+    <vcl-select-list-item value="Japan">
       <vcl-select-list-label>Japan</vcl-select-list-label>
     </vcl-select-list-item>
-    <vcl-select-list-item value="cn">
+    <vcl-select-list-item value="China">
       <vcl-select-list-label>China</vcl-select-list-label>
     </vcl-select-list-item>
-    <vcl-select-list-item value="th">
+    <vcl-select-list-item value="Thailand">
       <vcl-select-list-label>Thailand</vcl-select-list-label>
     </vcl-select-list-item>
   </vcl-select-list>
-</vcl-select>
-
-<p> Selected value: {{value1}}</p>
-
-<br>
-
-<h3>multi-select</h3>
-<vcl-select label="Select items">
-  <vcl-select-list [(value)]="value2" selectionMode="multiple" >
-    <vcl-select-list-item *ngFor="let item of items" [value]="item.value">
-      <vcl-select-list-label>{{item.label}}</vcl-select-list-label>
-    </vcl-select-list-item>
-  </vcl-select-list>
-</vcl-select>
-
-<p> Selected values: {{value2}}</p>
+</vcl-autocomplete>
