--- a/demo/app/demos/form-control-group/demo.component.html
+++ b/demo/app/demos/form-control-group/demo.component.html
@@ -1,4 +1,4 @@
-<form vclForm novalidate [formGroup]="formGroup" #form="ngForm" (submit)="onSubmit()">
+<form novalidate [formGroup]="formGroup" #form="ngForm" class="vclForm" (submit)="onSubmit()">
     <h2>Create your hero</h2>
   
     <vcl-form-control-group>
